--- a/pycam/Gui/gtk-interface/pycam-project.ui
+++ b/pycam/Gui/gtk-interface/pycam-project.ui
@@ -1016,7 +1016,6 @@
                                         <property name="headers_clickable">False</property>
                                         <property name="expander_column">Material Allowance</property>
                                         <property name="enable_search">False</property>
-                                        <property name="search_column">0</property>
                                         <child>
                                           <object class="GtkTreeViewColumn" id="task_enabled">
                                             <property name="title">Enabled</property>
@@ -1232,12 +1231,14 @@
                                     <property name="shadow_type">etched-in</property>
                                     <child>
                                       <object class="GtkTreeView" id="ToolListTable">
+                                        <property name="width_request">180</property>
+                                        <property name="height_request">120</property>
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="model">ToolList</property>
                                         <property name="headers_clickable">False</property>
                                         <property name="rules_hint">True</property>
-                                        <property name="search_column">0</property>
+                                        <property name="enable_search">False</property>
                                         <child>
                                           <object class="GtkTreeViewColumn" id="tool_id_column">
                                             <property name="title">ID</property>
@@ -1340,12 +1341,14 @@ This combination is added to the above task list.</property>
                                     <property name="shadow_type">etched-in</property>
                                     <child>
                                       <object class="GtkTreeView" id="ProcessListTable">
+                                        <property name="width_request">180</property>
+                                        <property name="height_request">120</property>
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="model">ProcessList</property>
                                         <property name="headers_clickable">False</property>
                                         <property name="rules_hint">True</property>
-                                        <property name="search_column">0</property>
+                                        <property name="enable_search">False</property>
                                         <child>
                                           <object class="GtkTreeViewColumn" id="Description1">
                                             <property name="title">Description</property>
