fixed output tool IDs in GCode added EMC tool definition export
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@279 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/pycam/Gui/gtk-interface/pycam-project.ui
+++ b/pycam/Gui/gtk-interface/pycam-project.ui
@@ -3987,4 +3987,8 @@ ODE is required for this setting.</property>
     <property name="visible">True</property>
     <property name="stock">gtk-execute</property>
   </object>
+  <object class="GtkAction" id="ExportEMCToolDefinition">
+    <property name="label">_Export EMC tools</property>
+    <property name="stock_id">gtk-execute</property>
+  </object>
 </interface>
