fixed "unit change" handling for bounds
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@413 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/pycam/Gui/gtk-interface/pycam-project.ui
+++ b/pycam/Gui/gtk-interface/pycam-project.ui
@@ -5039,19 +5039,6 @@ Any selected group of dimensions will be scaled accordingly.</property>
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkCheckButton" id="UnitChangeProcesses">
-                        <property name="label" translatable="yes">Boundaries and process settings</property>
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">False</property>
-                        <property name="draw_indicator">True</property>
-                      </object>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="position">2</property>
-                      </packing>
-                    </child>
-                    <child>
                       <object class="GtkCheckButton" id="UnitChangeTools">
                         <property name="label" translatable="yes">Tools</property>
                         <property name="visible">True</property>
@@ -5060,7 +5047,33 @@ Any selected group of dimensions will be scaled accordingly.</property>
                         <property name="draw_indicator">True</property>
                       </object>
                       <packing>
+                        <property name="position">2</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkCheckButton" id="UnitChangeProcesses">
+                        <property name="label" translatable="yes">Processes</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">False</property>
+                        <property name="draw_indicator">True</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
                         <property name="position">3</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkCheckButton" id="UnitChangeBounds">
+                        <property name="label" translatable="yes">Bounds</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">False</property>
+                        <property name="draw_indicator">True</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="position">4</property>
                       </packing>
                     </child>
                     <child>
@@ -5098,7 +5111,7 @@ Any selected group of dimensions will be scaled accordingly.</property>
                       <packing>
                         <property name="expand">False</property>
                         <property name="padding">4</property>
-                        <property name="position">4</property>
+                        <property name="position">5</property>
                       </packing>
                     </child>
                   </object>
